--- a/MiniBuild.Security/MiniBuild.Security.csproj
+++ b/MiniBuild.Security/MiniBuild.Security.csproj
@@ -5,4 +5,8 @@
         <AssemblyVersion>1.0.1</AssemblyVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NETCore.Encrypt" Version="2.0.9" />
+    </ItemGroup>
+
 </Project>
