--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -3,7 +3,7 @@
 on: ['push']
 
 env:
-  PROJECT_PATH: 'MiniBuild.Security/MiniBuild.Security.csproj'
+  PROJECT_PATH: MiniBuild.Security/MiniBuild.Security.csproj
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/output
   NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/sajmonr/index.json'
 
@@ -29,7 +29,7 @@ jobs:
         id: version
         uses: jasondavis303/net-sdk-proj-file-version
         with:
-          PROJ_FILE: env.PROJECT_PATH
+          PROJ_FILE: ${{ env.PROJECT_PATH }}
 
       - name: 'Pack project'
         run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }} -p:PackageVersion=${{ steps.version.outputs.ASSEMBLY_VERSION }}
