--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: 'Get version'
         id: version
-        uses: jasondavis303/net-sdk-proj-file-version
+        uses: naminodarie/get-net-sdk-project-versions-action@v1
         with:
           PROJ_FILE: MiniBuild.Security/MiniBuild.Security.csproj
 
       - name: 'Pack project'
-        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }} -p:PackageVersion=${{ steps.version.outputs.ASSEMBLY_VERSION }}
+        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }} -p:PackageVersion=${{ steps.version.outputs.assembly-version }}
 
       - name: 'Push package'
         run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -s ${{ env.NUGET_SOURCE_URL }} -k ${{ secrets.GITHUB_TOKEN }}
