--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -29,7 +29,7 @@ jobs:
         id: version
         uses: naminodarie/get-net-sdk-project-versions-action@v1
         with:
-          PROJ_FILE: MiniBuild.Security/MiniBuild.Security.csproj
+          proj-path: ${{ env.PROJECT_PATH }}
 
       - name: 'Pack project'
         run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }} -p:PackageVersion=${{ steps.version.outputs.assembly-version }}
