--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,6 +1,9 @@
 ﻿name: 'Deploy to NuGet'
 
-on: ['push']
+on:
+  push:
+    branches:
+      - master
 
 env:
   TEST_PROJECT_PATH: 'MiniBuild.Security.Tests/MiniBuild.Security.Tests.csproj'
